--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div>
             <span class="text-gray p-5-0">Dolci e dessert</span>
-            <h2 class="p-5-0 text-purple">Tiramisu<span class="d-none">(Dolce Tradizionale)</span></h2>
+            <h2 class="p-5-0 text-purple">Tiramisu<span class="d-none-mobile">(Dolce Tradizionale)</span></h2>
             <div id="recipe-card" class="">
                 <div>
                     <img src="img/image (10).png" alt="How to make tiramisu">
@@ -62,16 +62,50 @@
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
-            <aside class="debug ads">
-                pubblicità
+            <aside class="debug d-none-mobile">
+                <img src="img/banner.png" alt="pubblicita">
             </aside>
         </div>
         <!-- presentation -->
-        <div class="presentation">
-            <h3>Presentation</h3>
+        <div class="debug presentation">
+            <h3 id="caps">Presentation</h3>
             <div>
-                <div><img src="img/tiramisu.jpg" alt=""></div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sit asperiores dolore dolor incidunt accusantium maiores cumque vero maxime officiis doloremque numquam doloribus fugit illo iusto magni delectus id eveniet minus, expedita, dolores vel eligendi repellat? Aspernatur quidem sequi qui repellendus et, suscipit aliquid hic tempora harum deleniti eius voluptatibus?</div>
+                <div class="image d-flex a-center">
+                    <img src="img/tiramisu.jpg" alt="tiramisu presentation">
+                </div>
+                <div class="debug paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium iure fugit
+                    repudiandae corrupti dolorum magnam velit alias. Similique eligendi omnis pariatur voluptate
+                    deserunt, totam at deleniti iusto recusandae sint accusamus excepturi perferendis neque nulla nobis
+                    perspiciatis molestias? Voluptatum quia dolorum in voluptate id expedita, cum numquam quidem, maxime
+                    suscipit fuga eos rerum beatae eveniet, ipsum nam quod corrupti rem itaque saepe tempore quae nemo
+                    laboriosam ducimus? Velit eum voluptatibus alias magni reprehenderit atque in ab ratione expedita
+                    officiis ex, blanditiis tempore cum et quidem quasi, iusto asperiores. Tempore distinctio id dolorum
+                    optio obcaecati incidunt fugit veniam mollitia quod est blanditiis sint, rerum molestiae aut
+                    temporibus, <span class="bold">assumenda ex rem sit</span>tempora. Dicta, placeat ipsa. Ex vero
+                    neque, eaque eos deserunt
+                    minima modi mollitia corporis doloremque repudiandae quibusdam nesciunt quia autem, minus dolorem
+                    possimus soluta accusantium illo dolores fugit amet provident voluptatum ipsa? Consectetur molestiae
+                    illum nemo accusantium facilis id, eligendi fuga alias repudiandae animi quibusdam veritatis dicta
+                    fugit, necessitatibus perspiciatis, dolorum aliquid quis ipsum nesciunt. Iure ea eligendi eius
+                    numquam sit quasi, deserunt reprehenderit quia ducimus omnis eum consectetur libero amet veritatis
+                    nesciunt aliquid corporis, est atque maiores incidunt voluptate rem, id dolores ad. Natus magni at
+                    reprehenderit nulla, distinctio recusandae velit molestias corrupti doloremque quos fuga et cumque?
+                    Quisquam, totam dolor quia voluptates qui neque! Vitae minima omnis minus, quis eaque quod obcaecati
+                    natus dolores ipsam voluptates sunt optio temporibus harum dolorem in iste impedit nisi voluptatibus
+                    <span class="bold">voluptatum doloremque ducimus</span>dignissimos architecto numquam. Consequuntur
+                    reprehenderit error, nisi
+                    tempore delectus iusto quis possimus temporibus, iste libero, sunt minima odit facilis magni vitae.
+                    Vel dolorem nesciunt esse repudiandae, quas magni eum at quasi ullam. Enim non, dolorum saepe
+                    excepturi sit voluptates? At rem inventore ipsum ratione eos tempora, quas error minima officia vel.
+                    Aliquam fuga quasi dolorum iste sunt corporis alias minus, nostrum voluptatem earum fugit atque ut
+                    totam aspernatur facere. Animi odio dignissimos amet, ab quo nostrum ea provident rerum sunt
+                    blanditiis nam repellendus, eligendi ut? Voluptate cumque ipsa quia laudantium suscipit in dolores
+                    debitis. Iusto nobis voluptas quod perferendis molestias! Nobis numquam eveniet odit minus. Optio
+                    placeat quo nemo distinctio eaque dolores atque corrupti hic dicta quis, aut voluptate facilis alias
+                    error nu. Cupiditate doloribus sequi
+
+                </div>
             </div>
         </div>
     </main>
@@ -79,24 +113,21 @@
                                 FOOTER
     --------------------------------------------------------->
     <footer>
-        <div class="debug d-flex j-between a-center">
-            <div class="d-flex a-center">
-                <h3>2021 Giallo</h3>
-                <p>via dalle palle</p>
+        <div class=" d-flex j-between a-center f-wrap">
+            <div class="p-5-0">
+                <h3>© 2021 Giallo Booleano S.p.a.</h3>
+                <p>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
             </div>
-            <div class="debug">
-                <a href="">About us</a>
-                <a href="">Terms of use</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Cookie Policy</a>
-                <a href="">Disclaimer</a>
-            </div>
+            <nav class="p-5-0">
+                <a href="#">About us</a>
+                <a href="#">Terms of use</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookie Policy</a>
+                <a class=".gigi" href="#">Disclaimer</a>
+            </nav>
         </div>
     </footer>
 
 </body>
 
 </html>
-<!--------------------------------------------------------
-                            MAIN
---------------------------------------------------------->
