mobile and tablet

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div>
                     <img src="img/image (10).png" alt="How to make tiramisu">
                 </div>
-                <div class="bg-white">
+                <div class="bg-white ">
                     <span id="recipe" class="bold">In breve</span>
-                    <ul class="">
+                    <ul class="tablet">
                         <li>Difficolta:<span class="bold">Facile</span></li>
                         <li>Tempo:<span class="bold">40 min</span></li>
                         <li>porzione per:<span class="bold">8 persone</span></li>
@@ -47,19 +47,19 @@
             </div>
             <div class="d-flex j-between p-5-0">
                 <div class="mobile-box-social">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"> <span class="dekstop-social">facebook</span></i></a>
                 </div>
                 <div class="mobile-box-social">
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"> <span class="dekstop-social">twitter</span></i></a>
                 </div>
                 <div class="mobile-box-social">
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"> <span class="dekstop-social">instagram</span></i></a>
                 </div>
                 <div class="mobile-box-social">
-                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"> <span class="dekstop-social">printerest</span></i></a>
                 </div>
                 <div class="mobile-box-social">
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"> <span class="dekstop-social">youtube</span></i></a>
                 </div>
             </div>
             <aside class="debug d-none-mobile">
@@ -70,7 +70,7 @@
         <div class="debug presentation">
             <h3 id="caps">Presentation</h3>
             <div>
-                <div class="image d-flex a-center">
+                <div class="image d-flex a-center debug">
                     <img src="img/tiramisu.jpg" alt="tiramisu presentation">
                 </div>
                 <div class="debug paragraph">
@@ -113,7 +113,7 @@
                                 FOOTER
     --------------------------------------------------------->
     <footer>
-        <div class=" d-flex j-between a-center f-wrap">
+        <div id="footer" class=" d-flex j-between a-center f-wrap">
             <div class="p-5-0">
                 <h3>© 2021 Giallo Booleano S.p.a.</h3>
                 <p>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
