media tablet and desktop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="bg-white ">
                     <span id="recipe" class="bold">In breve</span>
-                    <ul class="tablet">
+                    <ul class="tablet dekstop">
                         <li>Difficolta:<span class="bold">Facile</span></li>
                         <li>Tempo:<span class="bold">40 min</span></li>
                         <li>porzione per:<span class="bold">8 persone</span></li>
